--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,11 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./task.db
+# COMMENT FOR TESTING
+sqlalchemy.url = postgresql://postgres:postgres@db:5432/task
+
+# UNCOMMENT FOR TESTING
+# sqlalchemy.url = sqlite:///./test.db
 
 
 [post_write_hooks]
